--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@
     --slate: #434455;
     --white: #FFFFFF;
     --cornflower: #E7E9FC;
-    --cloud: #F4F4FD
+    --cloud: #F4F4FD;
+    --light-slate: #8e8f99;  
 }
 
 body {
@@ -22,7 +23,13 @@ body {
     margin: 0;
 }
 
-h1,h2,h3,h4,h5,h6,p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     margin: 0;
  }
 
@@ -177,6 +184,13 @@ address {
     letter-spacing: 0.02em; 
     padding: 188px 0;
     text-align: center;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+    url(/images/people-office.jpg);
+    background-repeat: no-repeat ;
+    max-width: 1440px;
+    margin: 0 auto;
+    background-position: center;
+    background-size: cover;
   
 }
 
@@ -191,18 +205,39 @@ address {
 
 /*FEATURE SECTION */
 
-.feature-container {
+.feature-container{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 24px;
-    margin-left: 156px;
-    margin-right: 156px;
+}
+
+.title  {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.descriptions {
+    width: 264px;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.32px;
+    align-items: center;
+    align-content: center;
+    flex-basis: calc((100% - 72px) / 3);
+}
+
+
+/* ICONS*/
+.feature-container .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 264px;
+    height: 112px;
+    background-color: var(--cloud);
     
 }
 
-.feature-container .item {
-    flex-basis: calc((100% - 72px) / 4);
-}
 
 /* WHAT WE DO SECTION*/
 .section-head {
@@ -236,9 +271,41 @@ address {
 
 .our-team {
     display: flex;
-    flex-wrap: wrap;
     gap: 24px;  
 }
+
+.team-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+
+    
+}
+
+.team-social .link {  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--iris);
+    fill: var(--white);
+    border-radius: 40px;
+    
+}
+
+.team-social .item {
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+    padding-top: 10px;
+}
+
 
 .our-team .item {
     flex-basis: calc((100% - 72px) / 4);
@@ -255,6 +322,30 @@ address {
 
 .designation {
     padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+/*CUSTOMER SECTION*/
+.customers .item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: var(--light-slate) solid;
+    width: 168px;
+    height: 88px;
+    margin-left: 24px;
+    fill: var(--light-slate);
+}
+
+.customers {
+    display: flex;
+    justify-content: center;
+}
+
+.customers .item:hover,
+.customers .timer:focus {
+    fill: var(--ocean);
+    border-color: var(--ocean);
 }
 
 /*FOR PORTFOLIO BUTTONS*/
@@ -311,7 +402,6 @@ address {
 /* FOOTERS */
 .footer-container{
     background-color: var(--navy-blue);
-    
 }
 
 .holder {
@@ -326,5 +416,23 @@ address {
     letter-spacing: 0.32px;
     padding-top: 17.5px;
     padding-bottom: 100px;
+    
+}
+
+.social .icon-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--iris);
+    fill: var(--white);
+    border-radius: 40px;
+   
+}
+
+.footer-social {
+    display: flex;
     
 }
